# MulDecodeDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xmb/muldecodedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BlockingQueue.cpp  BlockingQueue.h  FFmpegDEcode.h  FFmpegJni.cpp  FFmpegJni.h  LogJni.h  Queue.cpp  Queue.h  decoder.cpp  decoder.h  decoder_demo.cpp  native-lib.cpp
app/src/main/java/com/xmb/muldecodedemo/: MainActivity.java  Player.java  RecordEncoder.java  RecordEncoderCore.java  TemplateComposeActivity.java  TemplateEditorActivity.java  TemplateVideoPreedit.java  TemplateVideoPreeditActivity.java  VideoDecoder.java  VideoEditorView.java
app/src/main/java/com/xmb/muldecodedemo/bean/: ConfigBean.java
app/src/main/java/com/xmb/muldecodedemo/egl/: EglCore.java  EglSurfaceBase.java  WindowSurface.java
app/src/main/java/com/xmb/muldecodedemo/filter/: AbsFilter.java  BackVideoFilter.java  BaseFilter.java  FBO.java  ImageFilter.java  OESFilter.java  OesFilter.java  PassThroughFilter.java  ProcessFilter.java  RGBFilter.java  WaterMarkFilter.java  YUVFilter.java
app/src/main/java/com/xmb/muldecodedemo/programs/: BaseProgram.java  GLAbsProgram.java  GreyProgram.java  OESProgram.java
app/src/main/java/com/xmb/muldecodedemo/utils/: FBO.java  FileUtils.java  MatrixUtils.java  OpenGlUtils.java  OutputImageFormat.java  Rotation.java  TextureRotationUtil.java  VideoToFrames.java
app/src/main/java/com/xmb/muldecodedemo/wiget/: DoubleSlideSeekBar.java  RoundProgressBar.java  WaitDialog.java
app/src/main/jni/: decoder.c
app/src/main/res/color/: while_sel.xml
app/src/main/res/drawable/: release_seerbar.xml  sel_wait_cancel.xml
app/src/main/res/layout/: activity_main.xml  activity_template_editor.xml  activity_template_preedit.xml  wait_dialog.xml
app/src/main/res/raw/: base_fragment.glsl  base_vertex.glsl  yuv2rgb_fragment.glsl  yuv_fragment.glsl
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/xmb/muldecodedemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
